--- a/view/FrontOffice/causes.html
+++ b/view/FrontOffice/causes.html
@@ -84,7 +84,7 @@
 					<h1 class="heading text-white mb-2" data-aos="fade-up">The Causes</h1>
 					<p data-aos="fade-up" class=" mb-5 text-white lead text-white-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum minima dignissimos hic mollitia eius et quam ducimus maiores eos magni.</p>
 					<p data-aos="fade-up"  data-aos-delay="100">
-						<a href="#" class="btn btn-primary me-4">Donate Now</a> 
+						<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary me-4">Donate Now</a> 
 					</p>		
 					
 				</div>
@@ -116,7 +116,7 @@
 								<div>$10,000.00</div>
 							</div>
 							<div>
-								<a href="#" class="btn btn-primary">Donate Now</a>
+							<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 							</div>
 						</div>
 					</div>
@@ -137,7 +137,7 @@
 								<div>$10,000.00</div>
 							</div>
 							<div>
-								<a href="#" class="btn btn-primary">Donate Now</a>
+							<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 							</div>
 						</div>
 					</div>
@@ -159,7 +159,7 @@
 								<div>$25,000.00</div>
 							</div>
 							<div>
-								<a href="#" class="btn btn-primary">Donate Now</a>
+							<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 							</div>
 						</div>
 					</div>
@@ -182,7 +182,7 @@
 								<div>$10,000.00</div>
 							</div>
 							<div>
-								<a href="#" class="btn btn-primary">Donate Now</a>
+							<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 							</div>
 						</div>
 					</div>
@@ -204,7 +204,7 @@
 								<div>$10,000.00</div>
 							</div>
 							<div>
-								<a href="#" class="btn btn-primary">Donate Now</a>
+							<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 							</div>
 						</div>
 					</div>
@@ -226,7 +226,7 @@
 								<div>$10,000.00</div>
 							</div>
 							<div>
-								<a href="#" class="btn btn-primary">Donate Now</a>
+							<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 							</div>
 						</div>
 					</div>
@@ -319,7 +319,7 @@
 						<h3>Navigation</h3>
 						<ul class="list-unstyled float-left links">
 							<li><a href="#">About us</a></li>
-							<li><a href="#">Donate Now</a></li>
+							<li><a href="/PeaceConnect/view/FrontOffice/indexRanim.php">Donate Now</a></li>
 							<li><a href="#">Causes</a></li>
 							<li><a href="#">Volunteer</a></li>
 							<li><a href="#">Terms</a></li>
