--- a/view/FrontOffice/contact.html
+++ b/view/FrontOffice/contact.html
@@ -85,7 +85,7 @@
 					<h1 class="heading text-white mb-2" data-aos="fade-up">Contact Us</h1>
 					<p data-aos="fade-up" class=" mb-5 text-white lead text-white-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum minima dignissimos hic mollitia eius et quam ducimus maiores eos magni.</p>
 					<p data-aos="fade-up"  data-aos-delay="100">
-						<a href="#" class="btn btn-primary me-4">Donate Now</a> 
+					<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary me-4">Donate Now</a>
 					</p>		
 					
 				</div>
@@ -250,7 +250,7 @@
 						<h3>Navigation</h3>
 						<ul class="list-unstyled float-left links">
 							<li><a href="#">About us</a></li>
-							<li><a href="#">Donate Now</a></li>
+							<li><a href="/PeaceConnect/view/FrontOffice/indexRanim.php">Donate Now</a></li>
 							<li><a href="#">Causes</a></li>
 							<li><a href="#">Volunteer</a></li>
 							<li><a href="#">Terms</a></li>
