--- a/view/FrontOffice/template.html
+++ b/view/FrontOffice/template.html
@@ -99,7 +99,7 @@
 					<h1 class="heading text-white mb-2" data-aos="fade-up">Give a helping hand to those who need it!</h1>
 					<p data-aos="fade-up" class=" mb-5 text-white lead text-white-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum minima dignissimos hic mollitia eius et quam ducimus maiores eos magni.</p>
 					<p data-aos="fade-up"  data-aos-delay="100">
-						<a href="#" class="btn btn-primary me-4 d-inline-flex align-items-center"> <span class="icon-attach_money me-2"></span><span>Donate Now</span></a> 
+					<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary me-4 d-inline-flex align-items-center"> <span class="icon-attach_money me-2"></span><span>Donate Now</span></a>
 						<a href="https://www.youtube.com/watch?v=mwtbEGNABWU" class="text-white glightbox d-inline-flex align-items-center"><span class="icon-play me-2"></span><span>Watch the video</span></a>
 					</p>		
 					
@@ -305,7 +305,7 @@
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, eveniet voluptates eligendi maxime ad. Quas commodi distinctio modi, aspernatur, quos neque omnis magnam voluptatibus, sapiente fugiat cupiditate velit impedit praesentium.</p>
 							<p>Reprehenderit hic illo, nulla autem odit molestiae molestias, dolores accusantium eos? Ut aspernatur fuga labore eius sequi nihil sit iusto, enim. Aliquam, cumque! Quaerat inventore illo dicta, exercitationem natus ducimus?</p>
 							<p class="mt-5">
-								<a href="#" class="btn btn-primary me-4">Donate Now</a>
+							<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary me-4">Donate Now</a>
 								<a href="#" class="link-more">Learn More <span class="icon-chevron-right"></span></a>
 							</p>
 						</div>
@@ -381,7 +381,7 @@
 									<div>$10,000.00</div>
 								</div>
 								<div>
-									<a href="#" class="btn btn-primary">Donate Now</a>
+								<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 								</div>
 							</div>
 						</div>
@@ -404,7 +404,7 @@
 									<div>$10,000.00</div>
 								</div>
 								<div>
-									<a href="#" class="btn btn-primary">Donate Now</a>
+								<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 								</div>
 							</div>
 						</div>
@@ -426,7 +426,7 @@
 									<div>$25,000.00</div>
 								</div>
 								<div>
-									<a href="#" class="btn btn-primary">Donate Now</a>
+								<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 								</div>
 							</div>
 						</div>
@@ -450,7 +450,7 @@
 									<div>$10,000.00</div>
 								</div>
 								<div>
-									<a href="#" class="btn btn-primary">Donate Now</a>
+								<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 								</div>
 							</div>
 						</div>
@@ -473,7 +473,7 @@
 									<div>$10,000.00</div>
 								</div>
 								<div>
-									<a href="#" class="btn btn-primary">Donate Now</a>
+								<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 								</div>
 							</div>
 						</div>
@@ -495,7 +495,7 @@
 									<div>$10,000.00</div>
 								</div>
 								<div>
-									<a href="#" class="btn btn-primary">Donate Now</a>
+								<a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-primary">Donate Now</a>
 								</div>
 							</div>
 						</div>
@@ -518,7 +518,7 @@
 				<div class="col-lg-7 mx-auto text-center">
 					<span class="subheading-white mb-3 text-white" data-aos="fade-up">Help Now</span>
 					<h3 class="mb-4 heading text-white" data-aos="fade-up">Let's Help The Unfortunate People </h3>
-					<a href="#" class="btn btn-outline-white me-3" data-aos="fade-up" data-aos-delay="100">Become a Volunteer</a> <a href="#" class="btn btn-outline-white" data-aos="fade-up" data-aos-delay="200">Donate Now</a>
+					<a href="#" class="btn btn-outline-white me-3" data-aos="fade-up" data-aos-delay="100">Become a Volunteer</a> <a href="/PeaceConnect/view/FrontOffice/indexRanim.php" class="btn btn-outline-white" data-aos="fade-up" data-aos-delay="200">Donate Now</a>
 				</div>		
 			</div>		
 		</div>		
@@ -708,7 +708,7 @@
 						<h3>Navigation</h3>
 						<ul class="list-unstyled float-left links">
 							<li><a href="#">About us</a></li>
-							<li><a href="#">Donate Now</a></li>
+							<li><a href="/PeaceConnect/view/FrontOffice/indexRanim.php">Donate Now</a></li>
 							<li><a href="#">Causes</a></li>
 							<li><a href="#">Volunteer</a></li>
 							<li><a href="#">Terms</a></li>
