--- a/view/FrontOffice/produits.html
+++ b/view/FrontOffice/produits.html
@@ -38,10 +38,9 @@
             <span class="cart-icon-wrapper"><i class="fas fa-shopping-cart"></i><span class="cart-badge" aria-label="Articles dans le panier" role="status"></span></span> Cart
           </a></li>
           <li><a href="suivi.html">Orders</a></li>
-          <li><a href="contact.html">Contact</a></li>
           <li><a href="userinfo.php">Profile</a></li>
         </ul>
-        <a href="tel:+33123456789" class="call-us"><span class="icon-phone"></span>+33 1 23 45 67 89</a>
+        <a href="tel:+21671523640" class="call-us"><span class="icon-phone"></span>+216 71 523 640</a>
         <div class="burger" id="burger">
           <span></span>
         </div>
@@ -57,10 +56,9 @@
       <li class="active"><a href="produits.html">Products</a></li>
       <li><a href="panier.html">Cart</a></li>
       <li><a href="suivi.html">Orders</a></li>
-      <li><a href="contact.html">Contact</a></li>
       <li><a href="userinfo.php">Profile</a></li>
     </ul>
-    <p style="margin-top:30px; font-size:14px; color:#555;">Appelez-nous : <strong>+33 1 23 45 67 89</strong></p>
+    <p style="margin-top:30px; font-size:14px; color:#555;">Appelez-nous : <strong>+216 71 523 640</strong></p>
   </div>
   <script src="../BackOffice/assets/js/cart-badge.js" defer></script>
   
@@ -181,7 +179,6 @@
               <li><a href="list_articles.php">Articles</a></li>
               <li><a href="index_integrated.php">Store</a></li>
               <li><a href="indexRanim.php">Donation</a></li>
-              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -213,7 +210,6 @@
 
         <div class="col-6 col-sm-6 col-md-6 col-lg-3">
           <div class="widget">
-            <h3>Contact</h3>
             <address>21 Rue el baten, el ghazela, Ariana 2080</address>
             <ul class="list-unstyled links mb-4">
               <li><a href="tel:+21671523640">+216 71 523 640</a></li>
