--- a/view/FrontOffice/suivi.html
+++ b/view/FrontOffice/suivi.html
@@ -68,14 +68,13 @@
         <a href="index.php" class="logo"><img src="../BackOffice/assets/img/logo.png" alt="Logo PeaceConnect"> PeaceConnect</a>
         <ul class="site-menu">
           <li><a href="index.php">Home</a></li>
-          <li><a href="index_integrated.html">Store</a></li>
+          <li><a href="index_integrated.php">Store</a></li>
           <li><a href="produits.html">Products</a></li>
           <li><a href="panier.html" class="cart-link"><span class="cart-icon-wrapper"><i class="fas fa-shopping-cart"></i><span class="cart-badge" aria-label="Items in cart" role="status"></span></span> Cart</a></li>
           <li><a href="suivi.html" class="active">Orders</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="userinfo.php">User</a></li>
+          <li><a href="userinfo.php">Profile</a></li>
         </ul>
-        <a href="tel:+33123456789" class="call-us"><span class="icon-phone"><i class="fas fa-phone"></i></span>+33 1 23 45 67 89</a>
+        <a href="tel:+21671523640" class="call-us"><span class="icon-phone"><i class="fas fa-phone"></i></span>+216 71 523 640</a>
         <div class="burger" id="burger"><span></span></div>
       </div>
     </div>
@@ -84,12 +83,11 @@
     <div class="close-btn" id="closeMobile">&times;</div>
     <ul>
       <li><a href="index.php">Home</a></li>
-      <li><a href="index_integrated.html">Store</a></li>
+      <li><a href="index_integrated.php">Store</a></li>
       <li><a href="produits.html">Products</a></li>
       <li><a href="panier.html">Cart</a></li>
       <li><a href="suivi.html" class="active">Orders</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="userinfo.php">User</a></li>
+      <li><a href="userinfo.php">Profile</a></li>
     </ul>
   </div>
   <script src="../BackOffice/assets/js/cart-badge.js" defer></script>
@@ -166,7 +164,6 @@
               <li><a href="list_articles.php">Articles</a></li>
               <li><a href="index_integrated.php">Store</a></li>
               <li><a href="indexRanim.php">Donation</a></li>
-              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -198,7 +195,6 @@
 
         <div class="col-6 col-sm-6 col-md-6 col-lg-3">
           <div class="widget">
-            <h3>Contact</h3>
             <address>21 Rue el baten, el ghazela, Ariana 2080</address>
             <ul class="list-unstyled links mb-4">
               <li><a href="tel:+21671523640">+216 71 523 640</a></li>
