--- a/view/BackOffice/dashboard.html
+++ b/view/BackOffice/dashboard.html
@@ -544,7 +544,7 @@
       <hr class="sidebar-divider my-0">
       
       <li class="nav-item active">
-        <a class="nav-link" href="#" onclick="showSection('statistiques'); return false;">
+        <a class="nav-link" href="/PeaceConnect/view/BackOffice/index_events.php">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span>
         </a>
@@ -722,7 +722,7 @@
           
           <!-- Navigation par onglets -->
           <div class="section-tabs">
-            <div class="section-tab active" onclick="showSection('statistiques')">
+            <div class="section-tab active" onclick="window.location.href='/PeaceConnect/view/BackOffice/index_events.php';">
               <i class="fas fa-chart-line"></i>
               <span>Statistiques</span>
             </div>
